--- a/diary/2014-12-11.wiki
+++ b/diary/2014-12-11.wiki
@@ -1,3 +1,5 @@
 Arrive 0745. Dropped Shae off at Dr. Campbell's office.
 
 Removed Ladder and Platform releases from the NDS-1 schedule per Anna.
+
+Out at 1545 to pick up Shae.
