--- a/Phone Directory.wiki
+++ b/Phone Directory.wiki
@@ -21,6 +21,7 @@
 | McGowan     | 3707      |
 | Olson, M    | 3802      |
 | Otero       | 3130      |
+| Schramer    | 3714      |
 | Tolliver    | 3430      |
 | Wazny       | 3786      |
 |             |           |
