--- a/diary/2014-12-15.wiki
+++ b/diary/2014-12-15.wiki
@@ -1,3 +1,7 @@
 Arrive 0730.
 
+Reviewed Earned and Actuals and prepared performance slides for weekly PC deck.
 
+Forecast December and estimated earnings for next two weeks. Estimate we are going to end December 1-2% off plan. Justin concurs.
+
+Out at 1700.
