--- a/diary/2014-12-16.wiki
+++ b/diary/2014-12-16.wiki
@@ -9,3 +9,6 @@ Attended meeting to discuss revised MR issue procedure.
 Attended weekly team meeting. Encouraged team to earn whatever they can over the next week and a half.
 
 Out at 1645.
+
+At home, Shae attacked and injured Harvey. Took Harvey to Pet Emergency Center. Injuries were too great. Had to put Harvey down. Now considering Shae's fate. Not sure that I can trust her around other animals/people. Sheila can't take anymore; she's done.:w
+
