--- a/diary/2014-12-23.wiki
+++ b/diary/2014-12-23.wiki
@@ -7,3 +7,5 @@ Updated NDS-1 Go Deck.
 Attended NDS-1 team meeting.
 
 Out at 1630.
+
+Stopped by WSP at George Hopper Road. Cited for 71 in a 60. Merry Christmas.
